--- a/tidsrapport-api/Dockerfile
+++ b/tidsrapport-api/Dockerfile
@@ -1,13 +1,21 @@
+# Bygg fas
 FROM eclipse-temurin:21-jdk-jammy AS builder
 WORKDIR /opt/app
+
 COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
 RUN ./mvnw dependency:go-offline
-COPY ./src ./src
-RUN ./mvnw clean install -DskipTests
 
+COPY ./src ./src
+RUN ./mvnw clean package -DskipTests
+
+# Kör fas
 FROM eclipse-temurin:21-jre-jammy
 WORKDIR /opt/app
 EXPOSE 8080
-COPY --from=builder /opt/app/target/*.jar /opt/app/*.jar
-ENTRYPOINT ["java","-Dspring.profiles.active=prod", "-jar", "/opt/app/*.jar" ]
+
+# Kopiera färdigt jar
+COPY --from=builder /opt/app/target/*.jar /opt/app/app.jar
+
+# Kör Spring Boot i default (dev)-läge
+ENTRYPOINT ["java", "-jar", "/opt/app/app.jar"]
